GCS: systemhealth: rename Guidance-Warning.html, rename Memory* html files to match element Ids in systemhealth svg files

--- a/ground/gcs/src/plugins/systemhealth/html/PathFollower-Warning.html
+++ b/ground/gcs/src/plugins/systemhealth/html/PathFollower-Warning.html
@@ -5,7 +5,7 @@
     <style></style>
   </head>
   <body>
-    <h1>Guidance: Warning</h1>
+    <h1>Path Follower: Warning</h1>
     <p>
     Timed out waiting for an attitude update.
     </p>
