Update the error messages. Thanks to kenz

--- a/ground/gcs/src/plugins/systemhealth/html/StateEstimation-Accelerometer-Queue-Not-Updating.html
+++ b/ground/gcs/src/plugins/systemhealth/html/StateEstimation-Accelerometer-Queue-Not-Updating.html
@@ -7,6 +7,6 @@
   <body>
     <h1>Attitude: </h1>
     <h2>Error Code: Accelerometer Queue not updating</h2>
-    <p>We are missing actual data from Accelerometer</p>
+    <p>Accelerometer data is not being received by the system, or is being received at too slow a rate.</p>
   </body>
 </html>
