--- a/ground/gcs/src/plugins/systemhealth/html/StateEstimation-No-GPS.html
+++ b/ground/gcs/src/plugins/systemhealth/html/StateEstimation-No-GPS.html
@@ -7,6 +7,6 @@
   <body>
     <h1>Attitude: </h1>
     <h2>Error Code: No GPS</h2>
-    <p>GPS is not ready initialized. Please wait until GPS is ready.</p>
+    <p>No GPS data is being received. Please check that the GPS is correctly wired, is receiving power, and has been configured to send all necessary messages in the uBlox binary protocol.</p>
   </body>
 </html>
