--- a/ground/gcs/src/plugins/systemhealth/html/StateEstimation-No-Magnetometer.html
+++ b/ground/gcs/src/plugins/systemhealth/html/StateEstimation-No-Magnetometer.html
@@ -7,6 +7,9 @@
   <body>
     <h1>Attitude: </h1>
     <h2>Error Code: No Magnetometer</h2>
-    <p>We are missing actual values from Magnetometer</p>
+    <p>One or more of the following conditions has occurred:
+			<li>This flight controller doesn't have a magnetometer<\li>
+			<li>The magnetometer has stopped working<\li>
+		</p>
   </body>
 </html>
