--- a/ground/gcs/src/plugins/systemhealth/html/StateEstimation-PDOP-Too-High.html
+++ b/ground/gcs/src/plugins/systemhealth/html/StateEstimation-PDOP-Too-High.html
@@ -9,7 +9,7 @@
     <h2>Error Code: PDOP too high</h2>
     <p>
     	<i>PDOP - Position Dilution of Precision</i><BR>
-    	Please wait until GPS is ready.
+    	The GPS needs a better lock, please either wait or move the model so the GPS has a better view of the sky.
     </p>
   </body>
 </html>
