--- a/ground/gcs/src/plugins/systemhealth/html/StateEstimation-No-Barometer.html
+++ b/ground/gcs/src/plugins/systemhealth/html/StateEstimation-No-Barometer.html
@@ -7,6 +7,9 @@
   <body>
     <h1>Attitude: </h1>
     <h2>Error Code: No Barometer</h2>
-    <p>we are missing actual values from Barometer</p>
+    <p>One or more of the following conditions has occurred:
+	  	<li>This flight controller doesn't have a barometer<\li>
+			<li>The barometer has stopped working<\li>
+		</p>
   </body>
 </html>
