--- a/ground/gcs/src/plugins/systemhealth/html/StateEstimation-Too-Few-Satellites.html
+++ b/ground/gcs/src/plugins/systemhealth/html/StateEstimation-Too-Few-Satellites.html
@@ -7,6 +7,6 @@
   <body>
     <h1>Attitude: </h1>
     <h2>Error Code: Too Few Satellites</h2>
-    <p>We don't have enough satellites. Please wait until GPS is ready.</p>
+    <p>The GPS isn't using enough satellites, please either wait or move the model so the GPS has a better view of the sky.</p>
   </body>
 </html>
