Improved error code message to be consistent with the one for the accelerometer queue.

--- a/ground/gcs/src/plugins/systemhealth/html/StateEstimation-Gyro-Queue-Not-Updating.html
+++ b/ground/gcs/src/plugins/systemhealth/html/StateEstimation-Gyro-Queue-Not-Updating.html
@@ -7,6 +7,6 @@
   <body>
     <h1>Attitude: </h1>
     <h2>Error Code: Gyro Queue not updating</h2>
-    <p>We are missinf actual data from gyro</p>
+    <p>Gyroscope data is not being received by the system, or is being received at too slow a rate.</p>
   </body>
 </html>
