Specifies a color of the text. The standard palette seems to not be defined, which causes the text in some instances to become white. This adds a style parameter in the html code.

--- a/ground/gcs/src/plugins/systemhealth/html/GPS-Error.html
+++ b/ground/gcs/src/plugins/systemhealth/html/GPS-Error.html
@@ -4,7 +4,7 @@
     <meta content="">
     <style></style>
   </head>
-  <body>
+  <body style="color: black">
     <h1>GPS: Error</h1>
     <p>
     The GPS has timed out; either there is no GPS plugged in, the GPS has locked up or there is some other hardware fault.
