--- a/ground/gcs/src/plugins/systemhealth/html/SystemConfiguration-Error-VelocityControl.html
+++ b/ground/gcs/src/plugins/systemhealth/html/SystemConfiguration-Error-VelocityControl.html
@@ -4,7 +4,7 @@
     <meta content="">
     <style></style>
   </head>
-  <body>
+  <body style="color: black">
     <h1>System Configuration: Error</h1>
     <h2>Error Code: Velocity Control</h2>
     <p>This is ConfigError.VelocityControl</p>
